# beach-garden-planning

./: .gitignore  .pre-commit-config.yaml  README.md
.github/ISSUE_TEMPLATE/: user-story-template.md
.github/workflows/: backend.yml
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
backend/db/: init.sql
backend/src/: jwt.rs  lib.rs  main.rs  rest.rs  utils.rs
backend/src/api/: app.rs  auth.rs  email.rs  mod.rs  rest.rs  wrappers.rs
backend/src/api/wrappers/: address.rs  addresses.rs  member.rs  members.rs  reservation.rs  reservation_to_member.rs
backend/src/db/: connection.rs  models.rs  queries.rs
backend/src/db/queries/: address.rs  addresses.rs  auth.rs  member.rs  members.rs  mod.rs  password_reset_token.rs  reservation.rs  reservation_to_member.rs
backend/tests/: common.rs  integration_tests.rs  member.rs  reservation.rs
frontend/: .env.example  .prettierrc.toml  middleware.ts  next.config.js  package.json  tailwind.config.js
frontend/app/: error.tsx  layout.tsx  page.tsx  providers.tsx
frontend/app/account/: layout.tsx  page.tsx
frontend/app/admin-panel/: page.tsx
frontend/app/confirm/: layout.tsx  page.tsx
frontend/app/edit-password/: page.tsx
frontend/app/first-login/: layout.tsx  page.tsx
frontend/app/login/: layout.tsx  page.tsx
frontend/app/password-forgotten/: page.tsx
frontend/app/password-reset/: page.tsx
frontend/app/planning/: dates.ts  layout.tsx  page.tsx
frontend/app/planning/[date]/: page.tsx
frontend/app/profile/: layout.tsx  page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/signup/: layout.tsx  page.tsx
frontend/components/: navbar.tsx  phone-input.tsx  primitives.ts  theme-switch.tsx
frontend/config/: site.ts
frontend/hooks/: useAuth.ts
