[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.18", default-features = false, features = ["tokio1-rustls", "builder", "ring", "rustls-native-certs"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.47.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-uuid-1"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.98"
axum-test = "18.0.0-rc3"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
