[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
local = []

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lambda_http = "0.17.0"
lambda_runtime = "0.14.4"
lettre = "0.11.18"
openssl = { version = "0.10.73", features = ["vendored"] }
rand = "0.9.2"
rustls = "0.23.31"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.47.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-uuid-1"] }
tokio-postgres-rustls = "0.13.0"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
webpki-roots = "1.0.2"

[dev-dependencies]
anyhow = "1.0.98"
axum-test = "18.0.0-rc3"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
